balances completed
